<resources>
    <string name="app_name">Shopping App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="my_account">My Account</string>
    <string name="banner">Banner</string>
    <string name="product_categories">Product Categories</string>
    <string name="view_all">View all</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="kids">Kids</string>
    <string name="beauty">Beauty</string>
    <string name="footwear">Footwear</string>
    <string name="bags">Bags</string>
    <string name="watches">Watches</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="find_your_items_here">Find your items here</string>
    <string name="clothing_and_accessories">Clothing and accessories</string>
    <string name="beauty_and_personal_care">Beauty and Personal Care</string>
    <string name="electronics">Electronics</string>
    <string name="home_and_furniture">Home and Furniture</string>
    <string name="sports_and_fitness">Sports and Fitness</string>
    <string name="books_movies_and_music">Books, Movies, and Music</string>
    <string name="toys_and_games">Toys and Games</string>
    <string name="quantity_2">Quantity: 2</string>
    <string name="price_50">Price: $50</string>
    <string name="quantity_1">Quantity: 1</string>
    <string name="price_30">Price: $30</string>
    <string name="total_130">Total: $130</string>
    <string name="checkout">Checkout</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_example_com">johndoe@example.com</string>
    <string name="order_history">Order History</string>
    <string name="no_orders_yet">No orders yet</string>
</resources>