<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/Categories"
        android:icon="@drawable/baseline_format_list_bulleted_24"
        android:title="@string/categories" />

    <item
        android:id="@+id/Home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/Cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/MyAccount"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/my_account" />

</menu>