<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <ImageView
        android:id="@+id/Banner"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:contentDescription="@string/banner"
        android:src="@drawable/banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tVProductCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/product_categories"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tVViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15dp"
            android:text="@string/view_all"
            android:textColor="#0000FF"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgMan"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/man"
            android:src="@drawable/man" />

        <ImageView
            android:id="@+id/imgWoman"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/woman"
            android:src="@drawable/woman" />

        <ImageView
            android:id="@+id/imgKids"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/kids"
            android:src="@drawable/kids" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="47dp"
            android:gravity="center"
            android:text="@string/man"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="95dp"
            android:gravity="center"
            android:text="@string/woman"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="95dp"
            android:gravity="center"
            android:text="@string/kids"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBeauty"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/beauty"
            android:src="@drawable/beauty" />

        <ImageView
            android:id="@+id/imgFootwear"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/footwear"
            android:src="@drawable/shoes" />

        <ImageView
            android:id="@+id/imgBags"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/bags"
            android:src="@drawable/bags" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:gravity="center"
            android:text="@string/beauty"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Footwear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="72dp"
            android:gravity="center"
            android:text="@string/footwear"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Bags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="84dp"
            android:gravity="center"
            android:text="@string/bags"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgWatches"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/watches"
            android:src="@drawable/watches" />

        <ImageView
            android:id="@+id/imgSunGlasses"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sunglasses"
            android:src="@drawable/sunglasses" />

        <ImageView
            android:id="@+id/imgKids2"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/kids"
            android:src="@drawable/kids" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Watches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="38dp"
            android:gravity="center"
            android:text="@string/watches"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SunGlasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="64dp"
            android:gravity="center"
            android:text="@string/sunglasses"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Kids2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="84dp"
            android:gravity="center"
            android:text="@string/kids"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>